--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.0.0",
     "axios": "^1.7.8",
     "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
@@ -17,6 +18,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.28.0",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
