--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "axios": "^1.7.8",
+    "crypto-js": "^4.2.0",
     "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
