--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "axios": "^1.7.8",
     "crypto-js": "^4.2.0",
