--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.0.0",
+    "algoliasearch": "^5.18.0",
     "axios": "^1.7.8",
     "crypto-js": "^4.2.0",
     "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-instantsearch": "^7.13.9",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.28.0",
     "react-stripe-checkout": "^2.6.3",
